--- a/assignments/lesson-7/franklin-7.html
+++ b/assignments/lesson-7/franklin-7.html
@@ -32,7 +32,7 @@
     	<li><a href="#">Greenville</a></li>
     	<li><a href="#">Springfield</a></li>
     	<li><a href="#">Storm Center</a></li>
-    	<li><a href="html_gallery-7.asp">Gallery</a></li>
+    	<li><a href="gallery-7.html">Gallery</a></li>
           
       </ul>
      
