--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <li>Lesson 4: <a href="assignments/lesson-4/fixme.css">Fixed CSS</a></li>
             <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Franklin Weather Page</a></li>
             <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin</a></li>
-            <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin</a></li>
-            <li>Lesson 7: <a href="assignments/lesson-7/gallery-7.html">Gallery</a></li>
+            <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin and Gallery</a></li>
+            
                       
         </main>
         <footer>
