--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin</a></li>
             <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin and Gallery</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/tablebuild.html">Table Build</a></li>
+            <li>Lesson 8: <a href="assignments/lesson-8/stormcenter.html">Storm Center</a></li>
             
                       
         </main>
