--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin and Gallery</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/tablebuild.html">Table Build</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/stormcenter.html">Storm Center</a></li>
-            <li>lesson 9: <a href="assignments/lesson-9/heroes.html">Super Heroes</a></li>
+            <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Super Heroes</a></li>
+            <li>Lesson 9: <a href="assignments/lesson-9/franklin-7.html">JSON</a></li>
                       
         </main>
         <footer>
