--- a/assignments/lesson-9/gallery-7.html
+++ b/assignments/lesson-9/gallery-7.html
@@ -11,14 +11,13 @@
   <meta name="author" content="allison stoker">
   <meta name="description" content="Franklin city weather">
   <!-- external style references in the proper cascading order -->     
-    <link href="https://fonts.googleapis.com/css?family=#" rel="stylesheet">  <!-- Google API font reference -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet"> <!-- normalize useragent/browser defaults -->
     <link href="styles/main-5.css" rel="stylesheet">    <!-- default styles - small/phone views -->
     <link href="styles/medium-5.css" rel="stylesheet">  <!-- medium/tablet views -->
     <link href="styles/large-5.css" rel="stylesheet">   <!-- large/wide/desktop views --> 
       <link href="styles/gallery-7.css" rel="stylesheet">
     <link href="styles/stormcenter.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
      <link href="gallery-7.html" rel="stylesheet">
     </head>
 <body>
@@ -34,7 +33,7 @@
          <button  onclick="toggleNavMenu()">&#9776;</button> 
       <ul id="NavMenu" class="hide">
     	<li><a href="index.html">Home</a></li>
-    	<li><a href="franklin-7">Franklin</a></li>
+    	<li><a href="franklin-7.html">Franklin</a></li>
     	<li><a href="#">Greenville</a></li>
     	<li><a href="#">Springfield</a></li>
     	<li><a href="stormcenter.html">Storm Center</a></li>
