--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -17,7 +17,7 @@
     <link href="styles/large-5.css" rel="stylesheet">   <!-- large/wide/desktop views --> 
       <link href="styles/gallery-7.css" rel="stylesheet">
     <link href="styles/gallery-medium.css" rel="stylesheet">
-    <link href="scripts/gallery-large.css" rel="stylesheet">
+    <link href="styles/gallery-large.css" rel="stylesheet">
     <link href="styles/stormcenter.css" rel="stylesheet">
     
     
