--- a/assignments/lesson-6/franklin-6.html
+++ b/assignments/lesson-6/franklin-6.html
@@ -9,12 +9,13 @@
   <meta name="author" content="allison stoker">
   <meta name="description" content="Franklin city weather">
   <!-- external style references in the proper cascading order -->     
-    <link href="https://fonts.googleapis.com/css?family=#" rel="stylesheet">  <!-- Google API font reference -->
-    <link href="styles/normalize.css" rel="stylesheet"> <!-- normalize useragent/browser defaults -->
+   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link href="normalize.css" rel="stylesheet"> <!-- normalize useragent/browser defaults -->
     <link href="styles/main-5.css" rel="stylesheet">    <!-- default styles - small/phone views -->
     <link href="styles/medium-5.css" rel="stylesheet">  <!-- medium/tablet views -->
     <link href="styles/large-5.css" rel="stylesheet">   <!-- large/wide/desktop views --> 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    
+    
 </head>
 <body>
 
@@ -56,7 +57,7 @@
       <div class="current">
         <p>Current:Sunny</p>
         <picture>
-            <img src="images/sun2.png" alt="" width="100" height="100">
+            <img src="images/sun.jpg" alt="" width="100" height="100">
                     </picture>
       </div>   
       <div class="conditions">
