--- a/assignments/weathersite/franklin.html
+++ b/assignments/weathersite/franklin.html
@@ -13,10 +13,10 @@
     <link href="styles/main.css" rel="stylesheet">    <!-- default styles - small/phone views -->
     <link href="styles/medium.css" rel="stylesheet">  <!-- medium/tablet views -->
     <link href="styles/large.css" rel="stylesheet">   <!-- large/wide/desktop views --> 
-      <link href="styles/gallery.css" rel="stylesheet">
+      <!--<link href="styles/gallery.css" rel="stylesheet">
     <link href="styles/gallery-medium.css" rel="stylesheet">
     <link href="styles/gallery-large.css" rel="stylesheet">
-    <link href="styles/stormcenter.css" rel="stylesheet">
+    <link href="styles/stormcenter.css" rel="stylesheet">-->
     
     </head>
 <body>
