--- a/assignments/weathersite/springfield.html
+++ b/assignments/weathersite/springfield.html
@@ -13,10 +13,10 @@
     <link href="styles/main.css" rel="stylesheet">    <!-- default styles - small/phone views -->
     <link href="styles/medium.css" rel="stylesheet">  <!-- medium/tablet views -->
     <link href="styles/large.css" rel="stylesheet">   <!-- large/wide/desktop views --> 
-      <link href="styles/gallery.css" rel="stylesheet">
+      <!--<link href="styles/gallery.css" rel="stylesheet">
     <link href="styles/gallery-medium.css" rel="stylesheet">
     <link href="styles/gallery-large.css" rel="stylesheet">
-    <link href="styles/stormcenter.css" rel="stylesheet">
+    <link href="styles/stormcenter.css" rel="stylesheet">-->
     
     </head>
 <body>
@@ -125,9 +125,9 @@
     </section>
       
     <article>
-      <h3>Franklin Breaks Record</h3>	
+      <h3>Springfield's Rainbows</h3>	
       <p class="town-article">
-        <img src="images/sunset.jpg" alt="" width="200" height="200">
+        <img src="images/rainbow.jpeg" alt="" width="200" height="200">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
       </p>
 		</article>		  
