--- a/assignments/lesson-8/franklin-7.html
+++ b/assignments/lesson-8/franklin-7.html
@@ -65,7 +65,8 @@
       <div class="conditions">
         <p>Precipitation:0%</p>  
         <p>Wind Speed:5 mph SW</p>
-        <p>Temperature: <span id="temp"></span></p>
+        <p>Temperature: <span id="currentTemp"></span></p>
+        
         <p>Wind Chill: <span id="windChillFactor"></span> </p>
             
       </div> 
