--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li>Lesson 8: <a href="assignments/lesson-8/stormcenter.html">Storm Center</a></li>
             <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Super Heroes</a></li>
             <li>Lesson 9: <a href="assignments/lesson-9/franklin-9.html">JSON</a></li>
+            <li>Lesson 10: <a href="assignments/weathersite/">Weather Site</a></li>
                       
         </main>
         <footer>
