--- a/assignments/weathersite/greenville.html
+++ b/assignments/weathersite/greenville.html
@@ -6,7 +6,7 @@
   <title>Wait 15 Minutes</title>
     
   <meta name="author" content="allison stoker">
-  <meta name="description" content="Springfield city weather">
+  <meta name="description" content="Greenville city weather">
   <!-- external style references in the proper cascading order -->     
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet"> <!-- normalize useragent/browser defaults -->
@@ -127,7 +127,7 @@
     <article>
       <h3>Greenville Spots Seasonal Migration</h3>	
       <p class="town-article">
-        <img src="images/birds.png" alt="" width="500" height="300">
+        <img src="images/birds.png" alt="birds flying" width="500" height="300">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
       </p>
 		</article>		  
