--- a/assignments/weathersite/gallery.html
+++ b/assignments/weathersite/gallery.html
@@ -37,7 +37,7 @@
     	<li><a href="greenville.html">Greenville</a></li>
     	<li><a href="springfield.html">Springfield</a></li>
     	<li><a href="stormcenter.html">Storm Center</a></li>
-    	<li class="active">><a href="gallery-7.html">Gallery</a></li>
+    	<li class="active"><a href="gallery-7.html">Gallery</a></li>
         
       </ul>
      
