--- a/assignments/lesson-7/franklin-7.html
+++ b/assignments/lesson-7/franklin-7.html
@@ -66,8 +66,9 @@
       <div class="conditions">
         <p>Precipitation:0%</p>  
         <p>Wind Speed:5 mph SW</p>
+          <span id="windSpeed">mph</span>
         <p>Temperature:22</p>
-           <span id="temp"></span>
+           <span id="currentTemp">&deg;</span>
         
           <p>Wind Chill:  <span id="windChillFactor"></span></p>
           
