--- a/assignments/weathersite/gallery.html
+++ b/assignments/weathersite/gallery.html
@@ -18,7 +18,9 @@
     <link href="styles/large.css" rel="stylesheet">   <!-- large/wide/desktop views --> 
       <link href="styles/gallery.css" rel="stylesheet">
     <link href="styles/stormcenter.css" rel="stylesheet">
-     <link href="gallery.html" rel="stylesheet">
+     <link href="styles/gallery.css" rel="stylesheet">
+    <link href="styles/gallery-medium.css" rel="stylesheet">
+   <link href="styles/gallery-large.css" rel="stylesheet"> 
     </head>
 <body>
 
@@ -84,7 +86,7 @@
     
   <script src="scripts/hamburger.js"></script>
   <script src="scripts/currentdate.js"></script>
-  <script src="scripts/windchill.js"></script>
+ 
     
 </body>
 </html>
