--- a/assignments/lesson-8/franklin-7.html
+++ b/assignments/lesson-8/franklin-7.html
@@ -14,8 +14,8 @@
     <link href="styles/medium-5.css" rel="stylesheet">  <!-- medium/tablet views -->
     <link href="styles/large-5.css" rel="stylesheet">   <!-- large/wide/desktop views --> 
       <link href="styles/gallery-7.css" rel="stylesheet">
-    <link href="scripts/gallery-medium.css" rel="stylesheet">
-    <link href="scripts/gallery-large.css" rel="stylesheet">
+    <link href="styles/gallery-medium.css" rel="stylesheet">
+    <link href="styles/gallery-large.css" rel="stylesheet">
     <link href="styles/stormcenter.css" rel="stylesheet">
     
     </head>
@@ -141,7 +141,7 @@
     
   <script src="scripts/hamburger.js"></script>
   <script src="scripts/currentdate.js"></script>
-  <script src="scripts/windchill.js"></script>
+ 
 
 </body>
 </html>
