--- a/assignments/lesson-9/stormcenter.html
+++ b/assignments/lesson-9/stormcenter.html
@@ -8,7 +8,7 @@
   <meta name="author" content="allison stoker">
   <meta name="description" content="Storm Center">
   <!-- external style references in the proper cascading order -->     
-    <link href="https://fonts.googleapis.com/css?family=#" rel="stylesheet">  <!-- Google API font reference -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet"> <!-- normalize useragent/browser defaults -->
     <link href="styles/main-9.css" rel="stylesheet">    <!-- default styles - small/phone views -->
     <link href="styles/medium-9.css" rel="stylesheet">  <!-- medium/tablet views -->
