--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Super Heroes</a></li>
             <li>Lesson 9: <a href="assignments/lesson-9/franklin-9.html">JSON</a></li>
             <li>Lesson 10: <a href="assignments/weathersite/">Weather Site</a></li>
-                      
+            <li>Lesson 11: <a href="assignments/lesson-11/intro-jquery-files/Lesson4/index.htm">jQuery</a></li>         
         </main>
         <footer>
             <p>&copy2018; Allison Stoker | Iowa | <a href="http://www.byui.edu/onlne">BYU-Idaho Online Learning</a></p>
