--- a/assignments/bikingsite/sales.html
+++ b/assignments/bikingsite/sales.html
@@ -47,12 +47,22 @@
 
 <div class="grid-container">
     
-  <div class="grid-item"><img src="images/powerfly.jpg" alt="fall" sizes="80wv" width="300" height="250">
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>
-  <div class="grid-item"><img src="images/remedy.jpg" alt="winter" sizes="80wv" width="300" height="250">
-         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>
-  <div class="grid-item"><img src="images/fuel.jpg" alt="lightening" sizes="80wv" width="300" height="250">            
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>  
+  <div class="grid-item">
+      <h2>Powerfly 7FS</h2>
+      <p>$4,779</p>
+      <img src="images/powerfly.jpg" alt="fall" sizes="80wv" width="300" height="250">
+        <p>Powerfly 7 FS is fast, versatile, and ridiculously capable full suspension electric mountain bike. It has an integrated mountain-specific Bosch motor that provides electric-assist up to 20 mph, a full RockShox suspension setup, capable 27.5+ mid-fat tires for extra stability and traction on the trail, and high-quality mountain bike components that can bring your off-road adventures to entirely new places.</p></div>
+  
+    <div class="grid-item">
+        <h2>Women's Remedy 9.8</h2>
+        <p>$4,779</p>
+        <img src="images/remedy.jpg" alt="winter" sizes="80wv" width="300" height="250">
+         <p>Remedy 9.8 Women's is built for getting rowdy on the most technical mountain bike trails, and it offers the versatility and capability to take on everything from epic singletrack to serious air. A stiff OCLV Mountain Carbon frame, RockShox suspension featuring Trek's exclusive RE:aktiv with Thru Shaft, and a 1x12 SRAM GX Eagle drivetrain are perfect for your wildest all-mountain adventures.</p></div>
+  
+    <div class="grid-item">
+        <h2>Fuel EX 9.8 Pluss</h2>
+        <p>$4,779</p>
+        <img src="images/fuel.jpg" alt="lightening" sizes="80wv" width="300" height="250"> <p>Fuel EX 9.8 Plus packs high-end trail bike spec in a plus-sized ride that sticks to the trail without fail. A featherlight OCLV Mountain Carbon frame, SRAM GX Eagle 1x12 drivetrain, and 140mm front and 130mm rear FOX Float suspension complement 27.5˝ mid-fat mountain bike tires for a fast, grippy, confidence-inspiring ride.</p></div>  
   
 </div>
 
