--- a/assignments/bikingsite/contact.html
+++ b/assignments/bikingsite/contact.html
@@ -76,8 +76,8 @@
     
     <footer>
             
-      <p></p>
-      <p></p>
+      <p>The Mountain Spoke</p>
+      <p>3950 Valley Commons Drive Bozeman, MT</p>
       <p></p>
       <p></p>
       <p></p>
