--- a/assignments/bikingsite/service.html
+++ b/assignments/bikingsite/service.html
@@ -56,6 +56,7 @@
     
             <script src="scripts/currentdate.js"></script>
             <script src="scripts/hamburger.js"></script>
+            <script src="scripts/services.js"></script>
     
     </body>
 </html>
