--- a/assignments/bikingsite/home.html
+++ b/assignments/bikingsite/home.html
@@ -44,15 +44,15 @@
       <div class="slideshow-container">
 
 <div class="mySlides fade">
-    <img src="images/look1.jpg" style="width: 1350px">
+    <img src="images/look1.jpg" alt="look out" style="width: 1350px">
   </div>
 
 <div class="mySlides fade">
-    <img src="images/ride1.jpg" style="width:1350px">
+    <img src="images/ride1.jpg" alt="bike on a road" style="width:1350px">
   </div>
 
 <div class="mySlides fade">
-    <img src="images/down.jpg" style="width:1350px">
+    <img src="images/down.jpg" alt="bikeing down a mountain" style="width:1350px">
   </div>
 
 </div>
@@ -76,7 +76,7 @@
            
       <p>The Mountain Spoke</p>
       <p>3950 Valley Commons Drive Bozeman, MT</p>
-      <p(555)555-5555></p>
+      <p>(555)555-5555</p>
       <p></p>
       <p></p>
     
