--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>Lesson 9: <a href="assignments/lesson-9/franklin-9.html">JSON</a></li>
             <li>Lesson 10: <a href="assignments/weathersite/">Weather Site</a></li>
             <li>Lesson 11: <a href="assignments/lesson-11/intro-jquery-files/Lesson4/index.htm">jQuery</a></li> 
-            <l1>Mountain Biking Site <a href="assignments/bikingsite/">The Mountain Spoke</a></l1>
+            <li>Mountain Biking Site <a href="assignments/bikingsite/">The Mountain Spoke</a></li>
         </main>
         <footer>
             <p>&copy2018; Allison Stoker | Iowa | <a href="http://www.byui.edu/onlne">BYU-Idaho Online Learning</a></p>
