fixed photo sizes

--- a/assignments/bikingsite/home.html
+++ b/assignments/bikingsite/home.html
@@ -6,7 +6,7 @@
   <title>The Mountain Spokes</title>
     
   <meta name="author" content="allison stoker">
-  <meta name="description" content="Franklin city weather">
+  <meta name="description" content="The Mountain Spoke">
   <!-- external style references in the proper cascading order -->     
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet"> <!-- normalize useragent/browser defaults -->
@@ -44,15 +44,15 @@
       <div class="slideshow-container">
 
 <div class="mySlides fade">
-    <img src="images/look1.jpg" alt="look out" style="width: 1350px">
+    <img src="images/look-b.jpg" alt="look out" style="width: 1350px">
   </div>
 
 <div class="mySlides fade">
-    <img src="images/ride1.jpg" alt="bike on a road" style="width:1350px">
+    <img src="images/ride-b1.jpg" alt="bike on a road" style="width:1350px">
   </div>
 
 <div class="mySlides fade">
-    <img src="images/down.jpg" alt="bikeing down a mountain" style="width:1350px">
+    <img src="images/down-b.jpg" alt="bikeing down a mountain" style="width:1350px">
   </div>
 
 </div>
