added form validation

--- a/assignments/bikingsite/service.html
+++ b/assignments/bikingsite/service.html
@@ -45,7 +45,7 @@
     </figure>
 
     <main>
-
+        <p>We offer  basic bike services to keep your bike up and running to keep you on the trails!</p>
         <table id="table">
             <tr>
                 <th>Type</th>
