--- a/assignments/bikingsite/service.html
+++ b/assignments/bikingsite/service.html
@@ -6,7 +6,7 @@
     <title>The Mountain Spokes</title>
 
     <meta name="author" content="allison stoker">
-    <meta name="description" content="The Mountain Spoke">
+    <meta name="description" content="mountain biking services">
     <!-- external style references in the proper cascading order -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet">
