add video link in footer

--- a/assignments/bikingsite/home.html
+++ b/assignments/bikingsite/home.html
@@ -83,7 +83,7 @@
         <p>The Mountain Spoke</p>
         <p>3950 Valley Commons Drive Bozeman, MT</p>
         <p>(555)555-5555</p>
-        
+        <a href="video.html">Website Video</a>
 
 
 
