--- a/assignments/bikingsite/video.html
+++ b/assignments/bikingsite/video.html
@@ -45,9 +45,9 @@
     </nav>
 
     <main>
-        <video width="320" height="240" controls>
-  <source src="video/mountain-spoke-video.swf" type="video/swf">
-  <source src="movie.ogg" type="video/ogg">
+        <video width="600" height="400" controls>
+  <source src="video/website%20video.mp4" type="video/mp4">
+ 
 Your browser does not support the video tag.
 </video>
         
